[gd_scene load_steps=41 format=3 uid="uid://cx65k3re7acsc"]

[ext_resource type="Shader" path="res://Characters/Enemies/hit_flash.gdshader" id="1_3u320"]
[ext_resource type="Texture2D" uid="uid://ctmt82ttuj8kj" path="res://Art/Enemies/Clawfly/Clawfly Attack.png" id="1_hiri1"]
[ext_resource type="Texture2D" uid="uid://d4def4ukkkcgt" path="res://Art/Enemies/Clawfly/Clawfly Dead.png" id="2_26tvy"]
[ext_resource type="Texture2D" uid="uid://6lonn0wkff2r" path="res://Art/Enemies/Clawfly/Clawfly Idle.png" id="3_n5lec"]
[ext_resource type="Texture2D" uid="uid://d2q7koj480c4h" path="res://Art/Enemies/Clawfly/Clawfly Warning.png" id="4_1hekp"]
[ext_resource type="Script" path="res://Characters/Enemies/Clawfly/ClawflyDamageable.gd" id="6_iun0l"]
[ext_resource type="Script" path="res://Characters/Enemies/Gooey/enemy_state_machine.gd" id="7_tfuth"]
[ext_resource type="Script" path="res://Characters/Enemies/Clawfly/state_idle.gd" id="8_qkn7o"]
[ext_resource type="Script" path="res://Characters/Enemies/Clawfly/state_warning.gd" id="8_w3lqp"]
[ext_resource type="Script" path="res://Characters/Enemies/Clawfly/state_attack.gd" id="9_d24gl"]
[ext_resource type="Script" path="res://Characters/Enemies/Clawfly/state_dead.gd" id="10_u35mv"]
[ext_resource type="Script" path="res://States and Abstracts/HitHurtBoxes/hitbox.gd" id="11_spc0r"]
[ext_resource type="Script" path="res://States and Abstracts/HitHurtBoxes/hurtbox.gd" id="12_s10uv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hp2dg"]
resource_local_to_scene = true
shader = ExtResource("1_3u320")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_547ad"]
atlas = ExtResource("1_hiri1")
region = Rect2(0, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_opeqf"]
atlas = ExtResource("1_hiri1")
region = Rect2(44, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_oieds"]
atlas = ExtResource("2_26tvy")
region = Rect2(0, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_anxck"]
atlas = ExtResource("2_26tvy")
region = Rect2(44, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_git2a"]
atlas = ExtResource("2_26tvy")
region = Rect2(88, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_vktjb"]
atlas = ExtResource("2_26tvy")
region = Rect2(132, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_wac4r"]
atlas = ExtResource("3_n5lec")
region = Rect2(0, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3kwx"]
atlas = ExtResource("3_n5lec")
region = Rect2(44, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tramc"]
atlas = ExtResource("3_n5lec")
region = Rect2(88, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p2j4"]
atlas = ExtResource("3_n5lec")
region = Rect2(132, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecd71"]
atlas = ExtResource("3_n5lec")
region = Rect2(176, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmgm8"]
atlas = ExtResource("3_n5lec")
region = Rect2(220, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ntp5"]
atlas = ExtResource("4_1hekp")
region = Rect2(0, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qd6d2"]
atlas = ExtResource("4_1hekp")
region = Rect2(44, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbsvi"]
atlas = ExtResource("4_1hekp")
region = Rect2(88, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_n50n8"]
atlas = ExtResource("4_1hekp")
region = Rect2(132, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw6l6"]
atlas = ExtResource("4_1hekp")
region = Rect2(176, 0, 44, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_pb6gg"]
atlas = ExtResource("4_1hekp")
region = Rect2(220, 0, 44, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ppw4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_547ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opeqf")
}],
"loop": true,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oieds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anxck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_git2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vktjb")
}],
"loop": false,
"name": &"dead",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wac4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3kwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tramc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1p2j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecd71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmgm8")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ntp5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qd6d2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbsvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n50n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw6l6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pb6gg")
}],
"loop": true,
"name": &"warning",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_42s42"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_xwc0o"]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cpkmf"]
_data = {
"RESET": SubResource("Animation_42s42"),
"hit": SubResource("Animation_xwc0o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b5l0v"]
size = Vector2(39, 19)

[sub_resource type="CircleShape2D" id="CircleShape2D_fe3my"]
radius = 140.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_antsk"]
size = Vector2(34, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7pcpd"]
size = Vector2(42, 22)

[node name="Clawfly" type="CharacterBody2D"]
collision_layer = 4

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_hp2dg")
sprite_frames = SubResource("SpriteFrames_2ppw4")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cpkmf")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b5l0v")

[node name="ClawflyDamageable" type="Node" parent="."]
script = ExtResource("6_iun0l")

[node name="EnemyStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "character", "sprite")]
script = ExtResource("7_tfuth")
initial_state = NodePath("Idle")
character = NodePath("..")
sprite = NodePath("../AnimatedSprite2D")

[node name="Idle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_qkn7o")
first_anim_name = "idle"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Idle"]
one_shot = true

[node name="Warning" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_w3lqp")
first_anim_name = "warning"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Warning"]
wait_time = 2.0
one_shot = true

[node name="SoundTimer" type="Timer" parent="EnemyStateMachine/Warning"]
wait_time = 0.1
one_shot = true

[node name="Attack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_d24gl")
first_anim_name = "attack"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Attack"]
wait_time = 2.0
one_shot = true

[node name="SoundTimer" type="Timer" parent="EnemyStateMachine/Attack"]
wait_time = 0.1
one_shot = true

[node name="Dead" type="Node" parent="EnemyStateMachine"]
script = ExtResource("10_u35mv")
can_move = false
first_anim_name = "dead"

[node name="AnimDurationTimer" type="Timer" parent="EnemyStateMachine/Dead"]

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 18

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_fe3my")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 18
script = ExtResource("11_spc0r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_antsk")
debug_color = Color(0.94902, 0.188235, 0.34902, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("12_s10uv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_7pcpd")
debug_color = Color(0.556863, 0.552941, 0.239216, 0.419608)

[connection signal="timeout" from="EnemyStateMachine/Idle/Timer" to="EnemyStateMachine/Idle" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Warning/Timer" to="EnemyStateMachine/Warning" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Attack/Timer" to="EnemyStateMachine/Attack" method="_on_timer_timeout"]
[connection signal="timeout" from="EnemyStateMachine/Dead/AnimDurationTimer" to="EnemyStateMachine/Dead" method="_on_anim_duration_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="EnemyStateMachine/Idle" method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="EnemyStateMachine/Attack" method="_on_detection_area_body_entered"]
